--- a/front-end/src/css/cat-mainStyle.scss
+++ b/front-end/src/css/cat-mainStyle.scss
@@ -11,6 +11,9 @@ html{
     margin-top:30px;
     display:flex;
     justify-content: space-evenly;
+    position: sticky;
+    top:20px;
+    background-color: white;
 }
 
 .imageArea{
