--- a/front-end/src/css/cat-mainStyle.scss
+++ b/front-end/src/css/cat-mainStyle.scss
@@ -5,10 +5,15 @@ html{
 .catagorySection{
     width:70vw;
     position: sticky;
+    h3{
+        padding-top:20px;
+        text-align: center;
+        margin-bottom:0;
+    }
 }
 
 .catMain{
-    margin-top:30px;
+    margin-top:20px;
     display:flex;
     justify-content: space-evenly;
     position: sticky;
