--- a/front-end/src/css/upload-styles.scss
+++ b/front-end/src/css/upload-styles.scss
@@ -32,7 +32,7 @@
     width: 500px;
     height:150px;
     border:thin dashed black;
-    margin:0 auto;
+    margin:20px auto;
     .dropzone-text{
         position: relative;
         top:60px;
