ordering started working

--- a/front-end/src/css/order-styles.scss
+++ b/front-end/src/css/order-styles.scss
@@ -7,3 +7,29 @@ margin-left:50px;
     margin-top:2rem;
     cursor: pointer;
 }
+// .sortablePic{
+//     height: 100px;
+//     width:100px;
+//     img{
+//         width:100%;
+//     }
+//}
+.sortablePic{
+    width: 200px; 
+    height: 200px; 
+    padding: 0.5em; 
+    margin: 10px 10px 10px 0; 
+    border:solid black 3px;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 3px 3px 16px -2px rgba(0,0,0,0.8);
+    img{
+        width: auto;
+        height: 95%;
+        max-width: 95%;
+        max-height: 95%;
+        display: block;
+        margin: 0 auto;
+        border-radius: 10px;
+    }
+}
