--- a/front-end/src/css/sidebarStyle.scss
+++ b/front-end/src/css/sidebarStyle.scss
@@ -132,6 +132,16 @@ input[type=checkbox]
     box-shadow: 6px 6px 16px -2px rgba(0,0,0,0.15);
 }
 
+.catSelector{
+    width: 90%;
+    margin:0 auto;
+}
+
 .radioLabel{
     margin-right:20px;
+}
+input[type=radio] {
+    border: 0px;
+    width: 100%;
+    height: 2em;
 }
