--- a/front-end/src/css/sidebarStyle.scss
+++ b/front-end/src/css/sidebarStyle.scss
@@ -1,31 +1,40 @@
 
 .sidebar{
-    background-color: whitesmoke;
+    background-color: #595959;
     width: 350px;
-    height: 100vh;
+    height: 90vh;
     padding-top: 30px;
     padding-bottom: 30px;
     text-align: center;
+    color:white;
+}
+
+.sidebar-heading{
+    margin-top:60px;
+    margin-bottom: 30px;
 }
 
 .sidebar1Text{
     margin:0 auto;
     max-width:85%;
+    font-size: 1.5rem;
+    text-align: left;
 }
 
 .checkContainer{
     display:flex;
-    justify-content: space-between;
+    //justify-content: space-between;
     align-items: center;
     font-size: 1.3rem;
     padding-right:50px;
     .checkContainer__count{
         margin:0;
-        margin-left:40px;
+        margin-left:76px;
     }
     .checkContainer__heading{
         margin:0;
-        margin-right:40px;
+        margin-left:30px;
+        //margin-right:40px;
     }
 }
 
@@ -124,7 +133,8 @@ input[type=checkbox]
 .back-button{
     margin-top:10px;
     color:#fff;
-    background-color:#ff0062;
+    background-color:#007bff;
+    //background-color:#ff0062;
     border:none;
     border-radius: 5px;
     height: 3rem;
