--- a/front-end/src/css/topbarStyle.css
+++ b/front-end/src/css/topbarStyle.css
@@ -1,5 +1,5 @@
 .topbar{
-    background-color: whitesmoke;
+    background-color: #595959;
     height: 175px;
     -webkit-box-shadow: 6px 6px 16px -2px rgba(0,0,0,0.15);
     -moz-box-shadow: 6px 6px 16px -2px rgba(0,0,0,0.15);
@@ -17,7 +17,7 @@
   height: 100px;
   width: 100px;
   cursor: pointer;
-  background-color: #1cc500;
+  background-color: rgb(80, 184, 0);
   border-radius: 50%;
     border: solid black 1px;
     display: inline-block;
@@ -42,7 +42,7 @@
     height: 100px;
     width: 100px;
     cursor: pointer;
-    background-color: white;
+    background-color: whitesmoke;
     border-radius: 50%;
     border: solid black 1px;
     display: inline-block;
@@ -80,4 +80,8 @@
 
 .welcomeName{
     padding-left:3rem;
+}
+
+.topbarName{
+    color:white;
 }
