added back buttons, made sidebar sticky

--- a/front-end/src/css/sidebarStyle.scss
+++ b/front-end/src/css/sidebarStyle.scss
@@ -2,11 +2,13 @@
 .sidebar{
     background-color: #595959;
     width: 350px;
-    height: 90vh;
+    height: 100vh;
     padding-top: 30px;
     padding-bottom: 30px;
     text-align: center;
     color:white;
+    position: sticky;
+    top: 0px;
 }
 
 .sidebar-heading{
