--- a/front-end/src/css/order-styles.scss
+++ b/front-end/src/css/order-styles.scss
@@ -1,3 +1,8 @@
+.UploadPage{
+    //display:flex;
+}
+
+
 .Box-draggable{
 width:50vw;
 margin-left:50px;
@@ -31,5 +36,27 @@ margin-left:50px;
         display: block;
         margin: 0 auto;
         border-radius: 10px;
+    }
+}
+
+.miniOrderContainer{
+    position:fixed;
+    top:200px;
+    left:630px;
+    margin-left:20px;
+    margin-top:20px;
+    width:40vw;
+    border: solid black;
+    border-radius: 10px;
+    box-shadow: 6px 6px 16px -2px rgba(0,0,0,0.15);
+    padding:20px;
+    .miniPics{
+    display:flex;
+    flex-wrap: wrap;
+        img{
+            width:25%;
+            height:25%;
+            margin:2px;
+        }
     }
 }
