--- a/front-end/src/css/cat-mainStyle.scss
+++ b/front-end/src/css/cat-mainStyle.scss
@@ -32,10 +32,12 @@ html{
     height: 200px; 
     padding: 0.5em; 
     margin: 10px 10px 10px 0; 
-    border:solid black 3px;
+    border:solid black 1px;
     overflow: hidden;
-    border-radius: 10px;
-    box-shadow: 3px 3px 16px -2px rgba(0,0,0,0.8);
+    border-radius: 5px;
+    //box-shadow: 3px 3px 16px -2px rgba(0,0,0,0.8);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     img{
         width: auto;
         height: 95%;
@@ -43,7 +45,7 @@ html{
         max-height: 95%;
         display: block;
         margin: 0 auto;
-        border-radius: 10px;
+        border-radius: 5px;
     }
 }
 
