--- a/front-end/src/css/order-styles.scss
+++ b/front-end/src/css/order-styles.scss
@@ -24,10 +24,11 @@ margin-left:50px;
     height: 200px; 
     padding: 0.5em; 
     margin: 10px 10px 10px 0; 
-    border:solid black 3px;
+    border:solid black 1px;
     overflow: hidden;
-    border-radius: 10px;
-    box-shadow: 3px 3px 16px -2px rgba(0,0,0,0.8);
+    border-radius: 5px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
     img{
         width: auto;
         height: 95%;
@@ -35,7 +36,7 @@ margin-left:50px;
         max-height: 95%;
         display: block;
         margin: 0 auto;
-        border-radius: 10px;
+        border-radius: 5px;
     }
 }
 
@@ -46,9 +47,10 @@ margin-left:50px;
     margin-left:20px;
     margin-top:20px;
     width:40vw;
-    border: solid black;
-    border-radius: 10px;
-    box-shadow: 6px 6px 16px -2px rgba(0,0,0,0.15);
+    border: solid black 1px;
+    border-radius: 5px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    
     padding:20px;
     .miniPics{
     display:flex;
