--- a/front-end/src/css/cat-mainStyle.scss
+++ b/front-end/src/css/cat-mainStyle.scss
@@ -38,9 +38,10 @@ html{
     //box-shadow: 3px 3px 16px -2px rgba(0,0,0,0.8);
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-    img{
+    .draggableImgImg{
         width: auto;
         height: 95%;
+        object-fit: cover;
         max-width: 95%;
         max-height: 95%;
         display: block;
