--- a/front-end/src/css/upload-styles.scss
+++ b/front-end/src/css/upload-styles.scss
@@ -40,3 +40,11 @@
         text-align: center;
     }
 }
+
+.trash{
+    width:9%;
+    cursor: pointer;
+    position: relative;
+    bottom: 3px;
+    right: 6px;
+}
