got moving into folders for all categories working

--- a/front-end/src/css/order-styles.scss
+++ b/front-end/src/css/order-styles.scss
@@ -1,4 +1,4 @@
-.UploadPage{
+.OrderPage{
     //display:flex;
 }
 
@@ -37,6 +37,7 @@ margin-left:50px;
         display: block;
         margin: 0 auto;
         border-radius: 5px;
+        object-fit: cover;
     }
 }
 
