--- a/front-end/src/css/complete-styles.scss
+++ b/front-end/src/css/complete-styles.scss
@@ -21,5 +21,10 @@
         height: 4rem;
         width:250px;
         box-shadow: 6px 6px 16px -2px rgba(0,0,0,0.15);
+        cursor: pointer;
+    }
+    a{
+        color:#fff;
+        text-decoration: none;
     }
 }
