--- a/front-end/src/css/signInStyles.scss
+++ b/front-end/src/css/signInStyles.scss
@@ -10,6 +10,15 @@
         width:100%;
         text-align: center;
         font-size: 3rem;
+        @media (max-width:1024px){
+            font-size: 2rem;
+        }
+        @media (max-width:768px){
+            top:40px;
+        }
+        @media (max-width:425px){
+            top:20px;
+        }
     }
 }
 
@@ -20,18 +29,34 @@
 }
 .name-form{
     position: relative;
+    width:100%;
     .name-form-div{
         position: absolute;
         top: 140px;
-        left: 260px;
+        margin-left:20vw;
+        @media (max-width:425px){
+            margin-left:20px;
+        }
+        @media (max-width:768px){
+            margin-left:80px;
+        }
+        @media (max-width:1024px){
+            //margin-left:210px;
+        }
         label{
             color:black;
         }
         input{
             height: 75px;
-            width: 500px;
+            width: 30vw;
             font-size: 2rem;
             padding-top:16px;
+            @media (max-width:768px){
+                width:90%;
+            }
+            @media (max-width:425px){
+                width:95%;
+            }
         }
         .next-button{
             margin-top:10px;
