--- a/front-end/src/css/upload-styles.scss
+++ b/front-end/src/css/upload-styles.scss
@@ -18,6 +18,43 @@
     width:6rem;
 }
 
+.upload-buttons{
+    margin: 30px auto;
+    padding-left:25%;
+    label{
+        margin-top:10px;
+        margin-left: 25px;
+        color:#fff;
+        background-color:#007bff;
+        border:none;
+        border-radius: 5px;
+        height: 3rem;
+        width:8rem;
+        box-shadow: 6px 6px 16px -2px rgba(0,0,0,0.15);
+        padding-top:12px;
+        padding-left:13px;
+    }
+    button{
+        margin-top:10px;
+        margin-left: 25px;
+        color:#fff;
+        background-color:#007bff;
+        border:none;
+        border-radius: 5px;
+        height: 3rem;
+        width:8rem;
+        box-shadow: 6px 6px 16px -2px rgba(0,0,0,0.15);
+    }
+    .chooseFiles{
+        width: 0.1px;
+        height: 0.1px;
+        opacity: 0;
+        overflow: hidden;
+        position: absolute;
+        z-index: -1;
+    }
+}
+
 .upload__form{
     display:flex;
     justify-content: space-evenly;
