--- a/front-end/src/css/complete-styles.scss
+++ b/front-end/src/css/complete-styles.scss
@@ -22,6 +22,10 @@
         width:250px;
         box-shadow: 6px 6px 16px -2px rgba(0,0,0,0.15);
         cursor: pointer;
+        transition: all 0.2s ease-in-out;
+        &:hover{
+            box-shadow: 0 5px 15px rgba(79, 96, 192, 0.6)
+        } 
     }
     a{
         color:#fff;
