--- a/front-end/src/css/upload-styles.scss
+++ b/front-end/src/css/upload-styles.scss
@@ -33,6 +33,11 @@
         box-shadow: 6px 6px 16px -2px rgba(0,0,0,0.15);
         padding-top:12px;
         padding-left:13px;
+        cursor: pointer;
+        transition: all 0.2s ease-in-out;
+        &:hover{
+            box-shadow: 0 5px 15px rgba(79, 96, 192, 0.6)
+        } 
     }
     button{
         margin-top:10px;
@@ -44,6 +49,11 @@
         height: 3rem;
         width:8rem;
         box-shadow: 6px 6px 16px -2px rgba(0,0,0,0.15);
+        cursor: pointer;
+        transition: all 0.2s ease-in-out;
+        &:hover{
+            box-shadow: 0 5px 15px rgba(79, 96, 192, 0.6)
+        } 
     }
     .chooseFiles{
         width: 0.1px;
