--- a/front-end/src/css/cat-mainStyle.scss
+++ b/front-end/src/css/cat-mainStyle.scss
@@ -54,14 +54,19 @@ html{
 .droppable{ 
     width: 150px; 
     height: 100px; 
-    padding: 0.5em; 
+    padding: 0.4em; 
     float: left; 
     margin: 10px;
     border: black solid 2px;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     border-radius: 5px;
     p{
         padding-top:22px;
+        text-shadow:
+        -1px -1px 0 #000,  
+         1px -1px 0 #000,
+         -1px 1px 0 #000,
+          1px 1px 0 #000;
     }
 }
 
@@ -98,6 +103,10 @@ html{
     background-color: white;
     color:black;
     text-align: center;
+    p{
+        text-shadow: none;
+    }
+    
 }
 .picFrame{
     background-image: url('../tempImages/fam\ \(3\).jpg');
