--- a/front-end/src/css/upload-styles.scss
+++ b/front-end/src/css/upload-styles.scss
@@ -94,4 +94,9 @@
     position: relative;
     bottom: 3px;
     right: 6px;
+    transition: all 0.2s ease-in-out;
+    &:hover{
+        width:14%;
+        bottom: 8px;
+    }
 }
