--- a/front-end/src/css/cat-mainStyle.scss
+++ b/front-end/src/css/cat-mainStyle.scss
@@ -19,6 +19,12 @@ html{
     position: sticky;
     top:20px;
     background-color: whitesmoke;
+    @media(max-width:768px){
+        flex-wrap: wrap;
+    }
+    @media(max-width:425px){
+        //flex-wrap: wrap;
+    }
 }
 
 .imageArea{
@@ -60,6 +66,12 @@ html{
     border: black solid 2px;
     font-size: 1.3rem;
     border-radius: 5px;
+    @media(max-width:768px){
+        width:150px;
+    }
+    @media(max-width:425px){
+        width:100px;
+    }
     p{
         padding-top:22px;
         text-shadow:
@@ -67,6 +79,9 @@ html{
          1px -1px 0 #000,
          -1px 1px 0 #000,
           1px 1px 0 #000;
+          @media(max-width:425px){
+            font-size:1rem;
+        }
     }
 }
 
@@ -74,6 +89,12 @@ html{
     background-color: #000dff;
     color:white;
     text-align: center;
+    p{
+        @media(max-width:425px){
+            font-size:0.9rem;
+            margin-left: -7px;
+        }
+    }
 }
 .family-box{
     background-color: #d0d700;
