--- a/front-end/src/css/complete-styles.scss
+++ b/front-end/src/css/complete-styles.scss
@@ -3,6 +3,10 @@
     background-image: url('../forest.jpg');
     background-size: cover;
     background-position-y: -430px;
+    background-repeat: no-repeat;
+    @media(max-width:1024px){
+        background-position-y: -210px;
+    }
 }
 
 
@@ -19,13 +23,16 @@
         border:none;
         border-radius: 5px;
         height: 4rem;
-        width:250px;
+        width:20vw;
         box-shadow: 6px 6px 16px -2px rgba(0,0,0,0.15);
         cursor: pointer;
         transition: all 0.2s ease-in-out;
         &:hover{
             box-shadow: 0 5px 15px rgba(79, 96, 192, 0.6)
         } 
+        @media(max-width:425px){
+            font-size:.8rem;
+        }
     }
     a{
         color:#fff;
