--- a/front-end/src/css/order-styles.scss
+++ b/front-end/src/css/order-styles.scss
@@ -12,13 +12,7 @@ margin-left:50px;
     margin-top:2rem;
     cursor: pointer;
 }
-// .sortablePic{
-//     height: 100px;
-//     width:100px;
-//     img{
-//         width:100%;
-//     }
-//}
+
 .sortablePic{
     width: 200px; 
     height: 200px; 
@@ -47,12 +41,14 @@ margin-left:50px;
     left:630px;
     margin-left:20px;
     margin-top:20px;
-    width:40vw;
+    width:36vw;
     border: solid black 1px;
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    
     padding:20px;
+    @media(max-width:768px){
+        display:none;
+    }
     .miniPics{
     display:flex;
     flex-wrap: wrap;
