--- a/front-end/src/css/sidebarStyle.scss
+++ b/front-end/src/css/sidebarStyle.scss
@@ -286,3 +286,13 @@ input[type=radio] {
 .black-text{
     color:black;
 }
+
+.footer{
+    position:fixed;
+    bottom:18px;
+    left:51px;
+    p{
+        margin: 2px 0;
+        color:white;
+    }
+}
