--- a/front-end/src/css/order-styles.scss
+++ b/front-end/src/css/order-styles.scss
@@ -37,11 +37,11 @@ margin-left:50px;
 
 .miniOrderContainer{
     position:fixed;
-    top:200px;
+    top:116px;
     left:630px;
     margin-left:20px;
     margin-top:20px;
-    width:36vw;
+    width:40vw;
     border: solid black 1px;
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -52,9 +52,10 @@ margin-left:50px;
     .miniPics{
     display:flex;
     flex-wrap: wrap;
+    align-items: center;
         img{
-            width:25%;
-            height:25%;
+            width:15%;
+            height:15%;
             margin:2px;
         }
     }
