disabled navigation circles

--- a/front-end/src/css/topbarStyle.scss
+++ b/front-end/src/css/topbarStyle.scss
@@ -19,7 +19,7 @@
 .green-circle{
   height: 80px;
   width: 80px;
-  cursor: pointer;
+  //cursor: pointer;
   color:white;
   background-color: #4285f4;
   border-radius: 50%;
@@ -47,7 +47,7 @@
 .white-circle{
     height: 80px;
     width: 80px;
-    cursor: pointer;
+    //cursor: pointer;
     background-color: whitesmoke;
     border-radius: 50%;
     border: solid black 1px;
