--- a/front-end/src/css/sidebarStyle.scss
+++ b/front-end/src/css/sidebarStyle.scss
@@ -289,10 +289,13 @@ input[type=radio] {
 
 .footer{
     position:fixed;
-    bottom:18px;
-    left:51px;
+    bottom:15px;
+    right:20px;
     p{
-        margin: 2px 0;
-        color:white;
+        margin: -3px 0;
+        color:blue;
+        a{
+            color:blue;
+        }
     }
 }
